--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "src/index.js",
   "scripts": {
     "test": "gulp test",
-    "cover": "gulp test-cov"
+    "cover": "gulp test-cov",
+    "preversion": "gulp test",
+    "version": "gulp build && git add syncsocket.js",
+    "postversion": "git push && git push --tags"
   },
   "repository": {
     "type": "git",
@@ -49,7 +52,7 @@
     "istanbul": "0.4.4",
     "json-loader": "0.5.4",
     "mocha": "3.0.2",
-    "syncsocket": "0.2.4",
+    "syncsocket": "0.2.10",
     "webpack-stream": "3.2.0"
   }
 }
