--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "eslint-config-standard": "5.3.5",
     "eslint-plugin-promise": "2.0.1",
     "eslint-plugin-standard": "2.0.0",
+    "ghooks": "1.3.2",
     "gulp": "3.9.1",
     "gulp-eslint": "3.0.1",
     "gulp-istanbul": "1.0.0",
@@ -54,5 +55,10 @@
     "mocha": "3.0.2",
     "syncsocket": "0.2.10",
     "webpack-stream": "3.2.0"
+  },
+  "config": {
+    "ghooks": {
+      "pre-commit": "npm run test"
+    }
   }
 }
