--- a/package.json
+++ b/package.json
@@ -38,22 +38,22 @@
   "devDependencies": {
     "babel-core": "6.13.2",
     "babel-eslint": "6.1.2",
-    "babel-loader": "6.2.4",
+    "babel-loader": "6.2.5",
     "babel-preset-es2015": "6.13.2",
     "chai": "3.5.0",
-    "eslint-config-standard": "5.3.5",
+    "eslint-config-standard": "6.0.0-beta.3",
     "eslint-plugin-promise": "2.0.1",
     "eslint-plugin-standard": "2.0.0",
     "ghooks": "1.3.2",
     "gulp": "3.9.1",
     "gulp-eslint": "3.0.1",
-    "gulp-istanbul": "1.0.0",
-    "gulp-mocha": "3.0.0",
+    "gulp-istanbul": "1.1.0",
+    "gulp-mocha": "3.0.1",
     "gulp-task-listing": "1.0.1",
-    "istanbul": "0.4.4",
+    "istanbul": "0.4.5",
     "json-loader": "0.5.4",
     "mocha": "3.0.2",
-    "syncsocket": "0.2.10",
+    "syncsocket": "0.2.13",
     "webpack-stream": "3.2.0"
   },
   "config": {
