--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "babel-loader": "6.2.5",
     "babel-preset-es2015": "6.13.2",
     "chai": "3.5.0",
-    "eslint-config-standard": "6.0.0-beta.3",
+    "eslint-config-standard": "5.3.5",
     "eslint-plugin-promise": "2.0.1",
     "eslint-plugin-standard": "2.0.0",
     "ghooks": "1.3.2",
