--- a/.eslintrc
+++ b/.eslintrc
@@ -10,6 +10,7 @@
     "no-extra-semi": 2,
     "semi-spacing": [2, { "before": false, "after": true }],
     "indent": ["error", 4, { "SwitchCase": 1 }],
-    "space-before-function-paren": ["error", { "anonymous": "ignore", "named": "never" }]
+    "space-before-function-paren": ["error", { "anonymous": "ignore", "named": "never" }],
+    "eqeqeq": 0
   }
 }
